--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="apple-touch-icon" href="/icon-180x180.png" sizes="180x180">
+    <link rel="icon" type="image/svg+xml" href="/mask-icon.svg" />
+    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
+    <link rel="shortcut icon" href="/favicon.ico">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="The world beneath your feet.">
+    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Underfoot</title>
   </head>
   <body>
     <div id="root"></div>
