Curious if theme-color works in prod

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <meta charset="UTF-8" />
     <meta name="description" content="The world beneath your feet.">
-    <meta name="theme-color" content="#ffffff">
+    <!-- <meta name="theme-color" content="#ffffff"> -->
+     <meta name="theme-color" content="#1976D2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Underfoot</title>
   </head>
